rust/betelgeuze-sys/vendor/include/betelgeuze/engine.h

#define BG_ABI_VERSION_MAJOR UINT32_C(1)
#define BG_ABI_VERSION_MINOR UINT32_C(8)
#define BG_ABI_VERSION UINT32_C(1)
#define BG_CANONICAL_LENGTH_UNIT "angstrom"
#define BG_CANONICAL_ENERGY_UNIT "kcal/mol"
#define BG_CANONICAL_FORCE_UNIT "kcal/(mol*angstrom)"
#define BG_CANONICAL_CHARGE_UNIT "elementary_charge"
#define BG_CANONICAL_MASS_UNIT "dalton"
#define BG_CANONICAL_ANGLE_UNIT "radian"
#define BG_CANONICAL_TIME_UNIT "femtosecond"
#define BG_CANONICAL_VELOCITY_UNIT "angstrom/femtosecond"
#define BG_CANONICAL_TEMPERATURE_UNIT "kelvin"
#define BG_COULOMB_CONSTANT_KCAL_ANGSTROM_PER_MOL_E2 (332.063713299)
typedef int32_t bg_status;
enum {
    BG_STATUS_OK = 0,
    BG_STATUS_INVALID_ARGUMENT = 1,
    BG_STATUS_ABI_MISMATCH = 2,
    BG_STATUS_UNSUPPORTED_BACKEND = 3,
    BG_STATUS_BACKEND_UNAVAILABLE = 4,
    BG_STATUS_OUT_OF_MEMORY = 5,
    BG_STATUS_CAPACITY_OVERFLOW = 6,
    BG_STATUS_BUFFER_TOO_SMALL = 7,
    BG_STATUS_BACKEND_ERROR = 8,
    BG_STATUS_INTERNAL_ERROR = 9,
    BG_STATUS_NUMERICAL_ERROR = 10
};
typedef int32_t bg_backend;
enum {
    BG_BACKEND_AUTO = 0,
    BG_BACKEND_CPP_CPU_REFERENCE = 1,
    BG_BACKEND_HIP_FAST = 2,
    BG_BACKEND_RUST_CPU = 3,
    BG_BACKEND_HIP_SAFE = 4,
    BG_BACKEND_CPU = BG_BACKEND_CPP_CPU_REFERENCE,
    BG_BACKEND_HIP = BG_BACKEND_HIP_FAST
};
typedef int32_t bg_unit_system;
enum {
    BG_UNIT_SYSTEM_ANGSTROM_KCAL_MOL = 1
};
typedef int32_t bg_integrator;
enum {
    BG_INTEGRATOR_VELOCITY_VERLET = 1,
    BG_INTEGRATOR_LANGEVIN_BAOAB = 2
};
typedef struct bg_context bg_context;
typedef struct bg_system bg_system;
typedef struct bg_forcefield bg_forcefield;
typedef struct bg_simulation bg_simulation;
typedef struct bg_context_options {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_backend backend;
    bg_unit_system unit_system;
    int32_t device_ordinal;
    uint32_t reserved0;
    uint64_t flags;
    uint64_t reserved[4];
} bg_context_options;
typedef struct bg_particle_soa {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *position_x_angstrom;
    const double *position_y_angstrom;
    const double *position_z_angstrom;
    const double *velocity_x_angstrom_per_femtosecond;
    const double *velocity_y_angstrom_per_femtosecond;
    const double *velocity_z_angstrom_per_femtosecond;
    const double *mass_dalton;
    const double *charge_elementary;
    uint64_t reserved[4];
} bg_particle_soa;
typedef struct bg_particle_soa_view {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *position_x_angstrom;
    const double *position_y_angstrom;
    const double *position_z_angstrom;
    const double *velocity_x_angstrom_per_femtosecond;
    const double *velocity_y_angstrom_per_femtosecond;
    const double *velocity_z_angstrom_per_femtosecond;
    const double *mass_dalton;
    const double *charge_elementary;
    uint64_t reserved[4];
} bg_particle_soa_view;
typedef struct bg_position_soa {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const double *x_angstrom;
    const double *y_angstrom;
    const double *z_angstrom;
    uint64_t reserved[4];
} bg_position_soa;
enum {
    BG_PERIODIC_AXIS_X = UINT32_C(1) << 0,
    BG_PERIODIC_AXIS_Y = UINT32_C(1) << 1,
    BG_PERIODIC_AXIS_Z = UINT32_C(1) << 2,
    BG_PERIODIC_AXES_ALL = BG_PERIODIC_AXIS_X | BG_PERIODIC_AXIS_Y |
                           BG_PERIODIC_AXIS_Z
};
typedef struct bg_forcefield_soa_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t atom_count;
    bg_unit_system unit_system;
    uint32_t periodic_axes_mask;
    const double *sigma_angstrom;
    const double *epsilon_kcal_per_mol;
    uint64_t bond_count;
    const uint64_t *bond_atom_i;
    const uint64_t *bond_atom_j;
    const double *bond_equilibrium_angstrom;
    const double *bond_force_constant_kcal_per_mol_angstrom2;
    uint64_t angle_count;
    const uint64_t *angle_atom_i;
    const uint64_t *angle_atom_j;
    const uint64_t *angle_atom_k;
    const double *angle_equilibrium_radians;
    const double *angle_force_constant_kcal_per_mol_radian2;
    uint64_t torsion_count;
    const uint64_t *torsion_atom_i;
    const uint64_t *torsion_atom_j;
    const uint64_t *torsion_atom_k;
    const uint64_t *torsion_atom_l;
    const uint32_t *torsion_periodicity;
    const double *torsion_phase_radians;
    const double *torsion_amplitude_kcal_per_mol;
    uint64_t exclusion_count;
    const uint64_t *exclusion_atom_i;
    const uint64_t *exclusion_atom_j;
    uint64_t pair_scale_count;
    const uint64_t *pair_scale_atom_i;
    const uint64_t *pair_scale_atom_j;
    const double *pair_scale_lennard_jones;
    const double *pair_scale_coulomb;
    double cell_lengths_angstrom[3];
    double cutoff_angstrom;
    double switch_start_angstrom;
    double dielectric;
    double screening_kappa_per_angstrom;
    double minimum_pair_distance_angstrom;
    uint64_t reserved[4];
} bg_forcefield_soa_v1;
typedef struct bg_force_soa_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t particle_capacity;
    uint64_t particle_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    double *x_kcal_per_mol_angstrom;
    double *y_kcal_per_mol_angstrom;
    double *z_kcal_per_mol_angstrom;
    uint64_t reserved[4];
} bg_force_soa_v1;
typedef struct bg_energy_components_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    double harmonic_bond_kcal_per_mol;
    double harmonic_angle_kcal_per_mol;
    double periodic_torsion_kcal_per_mol;
    double lennard_jones_kcal_per_mol;
    double coulomb_kcal_per_mol;
    double total_kcal_per_mol;
    uint64_t reserved[4];
} bg_energy_components_v1;
typedef struct bg_distance_constraints_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    uint64_t constraint_count;
    bg_unit_system unit_system;
    uint32_t reserved0;
    const uint64_t *atom_i;
    const uint64_t *atom_j;
    const double *distance_angstrom;
    double tolerance_angstrom;
    double velocity_tolerance_angstrom_per_femtosecond;
    uint32_t max_iterations;
    uint32_t reserved1;
    uint64_t reserved[4];
} bg_distance_constraints_v1;
typedef struct bg_simulation_options_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    bg_integrator integrator;
    double timestep_femtoseconds;
    double temperature_kelvin;
    double friction_per_femtosecond;
    uint64_t random_seed;
    uint64_t reserved[4];
} bg_simulation_options_v1;
typedef struct bg_minimizer_options_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t max_iterations;
    uint32_t max_line_search_steps;
    uint32_t reserved1;
    double initial_step_angstrom2_mol_per_kcal;
    double minimum_step_angstrom2_mol_per_kcal;
    double energy_tolerance_kcal_per_mol;
    double force_tolerance_kcal_per_mol_angstrom;
    double armijo_coefficient;
    double backtrack_factor;
    uint64_t reserved[4];
} bg_minimizer_options_v1;
typedef struct bg_minimization_report_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t iterations;
    uint32_t converged;
    uint32_t reserved1;
    double initial_potential_kcal_per_mol;
    double final_potential_kcal_per_mol;
    double maximum_force_kcal_per_mol_angstrom;
    uint64_t reserved[4];
} bg_minimization_report_v1;
typedef struct bg_dynamics_report_v1 {
    uint32_t struct_size;
    uint32_t abi_version;
    bg_unit_system unit_system;
    uint32_t reserved0;
    uint64_t steps_completed;
    uint64_t absolute_step;
    uint64_t degrees_of_freedom;
    double potential_kcal_per_mol;
    double kinetic_kcal_per_mol;
    double total_kcal_per_mol;
    double temperature_kelvin;
    uint64_t reserved[4];
} bg_dynamics_report_v1;
BG_API uint32_t BG_CALL bg_abi_version(void) BG_NOEXCEPT;
BG_API uint32_t BG_CALL bg_abi_version_major(void) BG_NOEXCEPT;
BG_API uint32_t BG_CALL bg_abi_version_minor(void) BG_NOEXCEPT;
BG_API const char *BG_CALL bg_abi_version_string(void) BG_NOEXCEPT;
BG_API const char *BG_CALL bg_status_string(bg_status status) BG_NOEXCEPT;
BG_API const char *BG_CALL bg_backend_string(bg_backend backend) BG_NOEXCEPT;
BG_API const char *BG_CALL bg_unit_system_string(bg_unit_system units) BG_NOEXCEPT;
BG_API const char *BG_CALL bg_last_error_message(void) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_last_error_message_copy(
    char *buffer,
    uint64_t buffer_capacity,
    uint64_t *required_size) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_context_options_init(
    bg_context_options *options,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_particle_soa_init(
    bg_particle_soa *particles,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_particle_soa_view_init(
    bg_particle_soa_view *view,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_position_soa_init(
    bg_position_soa *positions,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_forcefield_soa_v1_init(
    bg_forcefield_soa_v1 *forcefield,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_force_soa_v1_init(
    bg_force_soa_v1 *forces,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_energy_components_v1_init(
    bg_energy_components_v1 *energy,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_distance_constraints_v1_init(
    bg_distance_constraints_v1 *constraints,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_simulation_options_v1_init(
    bg_simulation_options_v1 *options,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_minimizer_options_v1_init(
    bg_minimizer_options_v1 *options,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_minimization_report_v1_init(
    bg_minimization_report_v1 *report,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
BG_API bg_status BG_CALL bg_dynamics_report_v1_init(
    bg_dynamics_report_v1 *report,
    size_t caller_struct_size,
    uint32_t caller_abi_version) BG_NOEXCEPT;
#  define bg_context_options_init(options) \
    bg_context_options_init( \
        (options), sizeof(bg_context_options), BG_ABI_VERSION)
#  define bg_particle_soa_init(particles) \
    bg_particle_soa_init( \
        (particles), sizeof(bg_particle_soa), BG_ABI_VERSION)
#  define bg_particle_soa_view_init(view) \
    bg_particle_soa_view_init( \
        (view), sizeof(bg_particle_soa_view), BG_ABI_VERSION)
#  define bg_position_soa_init(positions) \
    bg_position_soa_init( \
        (positions), sizeof(bg_position_soa), BG_ABI_VERSION)
#  define bg_forcefield_soa_v1_init(forcefield) \
    bg_forcefield_soa_v1_init( \
        (forcefield), sizeof(bg_forcefield_soa_v1), BG_ABI_VERSION)
#  define bg_force_soa_v1_init(forces) \
    bg_force_soa_v1_init( \
        (forces), sizeof(bg_force_soa_v1), BG_ABI_VERSION)
#  define bg_energy_components_v1_init(energy) \
    bg_energy_components_v1_init( \
        (energy), sizeof(bg_energy_components_v1), BG_ABI_VERSION)
#  define bg_distance_constraints_v1_init(constraints) \
    bg_distance_constraints_v1_init( \
        (constraints), \
        sizeof(bg_distance_constraints_v1), \
        BG_ABI_VERSION)
#  define bg_simulation_options_v1_init(options) \
    bg_simulation_options_v1_init( \
        (options), \
        sizeof(bg_simulation_options_v1), \
        BG_ABI_VERSION)
#  define bg_minimizer_options_v1_init(options) \
    bg_minimizer_options_v1_init( \
        (options), \
        sizeof(bg_minimizer_options_v1), \
        BG_ABI_VERSION)
#  define bg_minimization_report_v1_init(report) \
    bg_minimization_report_v1_init( \
        (report), \
        sizeof(bg_minimization_report_v1), \
        BG_ABI_VERSION)
#  define bg_dynamics_report_v1_init(report) \
    bg_dynamics_report_v1_init( \
        (report), sizeof(bg_dynamics_report_v1), BG_ABI_VERSION)